# flabbergast

./: .eslintrc.js  .gitattributes  .gitignore  .travis-build  .travis.yml  COPYING  FAQ.md  Makefile.am  README.md  autogen.sh  bootstrap  bootstrap-from-web  build-macos-pkg.in  check-format  compiler.o_0  config.vapi  configure.ac  data.vala  db-man.o_0  db.o_0  engine.vala  expr.vala  expr_arith.vala  expr_file.vala  expr_frame.vala  expr_fricassee.vala  expr_misc.vala  expr_tuple.vala  expr_type.vala  filetype.vim  flabbergast-diff  flabbergast-diff.1  flabbergast-manual.md  flabbergast.xml  flabbergast_apidoc.7  flabbergast_language.7  flabbergast_uri.7  foreign.vala  format  formatter.vala  (+28 more)
debian/: rules  (+14 more)
platform/cli/: .gitignore  AssemblyInfo.cs  AssemblyInfo.cs.in  Makefile  Makefile.am  Options.cs  README.md  analyser.cs  build-main.cs  compiler-analyser.cs  compiler-cli.flbgst  compiler-cli.o_0  compiler-generator.cs  compiler-main.cs  compiler-misc.cs  compiler-parser.cs  config.cs.in  data-frame.cs  data-misc.cs  data-srcref.cs  data-stringish.cs  data.cs  db-cli.o_0  dlcompile.cs  dlopen.cs  doc-main.cs  exec-base.cs  exec-computation.cs  exec-lookup.cs  exec.cs  flabbergast-build.csproj  flabbergast-compiler.csproj  flabbergast-compilerservices.csproj  flabbergast-documenter.csproj  flabbergast-printer.csproj  flabbergast-repl.csproj  flabbergast-runtime.csproj  flabbergast-test.csproj  flabbergast-urihandler.csproj  flabbergast.nuspec.in  (+49 more)
platform/cli/tests/errors/: xinvoke-type.o_0
platform/jvm/: .gitignore  Makefile.am  build-fat  compiler-jvm.flbgst  compiler-jvm.o_0  db-jvm.o_0  intellij-style.xml  jarc  jflabbergast-docgen.1  jflabbergast-repl.1  jflabbergast.1  maven-deploy.in  pom.xml  run_test
platform/jvm/compiler/flabbergast/: ApiGenerator.java  AstNode.java  AstTypeableNode.java  AutoUnboxValue.java  BoolConstant.java  BooleanStringish.java  BoundNameInfo.java  CodeRegion.java  CompareValue.java  CompilationUnit.java  ConsoleCollector.java  CopyFromParentInfo.java  DefinitionGenerator.java  DelegateValue.java  DynamicCompiler.java  Ensurable.java  Environment.java  ErrorCollector.java  FieldValue.java  FlavourAccumulate.java  FlavourAttribute.java  FlavourAware.java  FlavourAwareAccumulate.java  FlavourEmpty.java  FlavourRepl.java  FloatConstant.java  FunctionGenerator.java  Generator.java  IntConstant.java  JunkNameInfo.java  LoadableCache.java  LoadableValue.java  LookupCache.java  MainBuildCache.java  MainCompiler.java  MainDocumenter.java  MainPrinter.java  MainREPL.java  Maskable.java  MatchedFrameValue.java  (+22 more)
platform/jvm/flabbergast-base/: pom.xml
platform/jvm/flabbergast-base/src/main/java/: module-info.java
platform/jvm/flabbergast-cli/: pom.xml
platform/jvm/flabbergast-cli/src/main/java/: module-info.java
platform/jvm/flabbergast-compiler/: pom.xml
platform/jvm/flabbergast-compiler/src/main/java/: module-info.java
platform/jvm/flabbergast-etcd/: pom.xml
platform/jvm/flabbergast-etcd/src/main/java/: module-info.java
platform/jvm/flabbergast-etcd/src/main/o_0/coreos/: etcd.o_0
platform/jvm/flabbergast-graphql/: pom.xml
platform/jvm/flabbergast-graphql/src/main/java/: module-info.java
platform/jvm/flabbergast-graphql/src/main/o_0/facebook/: graphql.o_0
platform/jvm/flabbergast-kubernetes/: pom.xml
platform/jvm/flabbergast-kubernetes/src/main/java/: module-info.java
platform/jvm/flabbergast-kubernetes/src/main/o_0/cncf/: kubernetes.o_0
platform/jvm/flabbergast-language-server/: pom.xml
platform/jvm/flabbergast-language-server/src/main/java/: module-info.java
platform/jvm/flabbergast-maven-plugin/: pom.xml
platform/jvm/flabbergast-mongodb/: pom.xml
platform/jvm/flabbergast-mongodb/src/main/java/: module-info.java
platform/jvm/flabbergast-mongodb/src/main/o_0/: mongodb.o_0
platform/jvm/flabbergast-s3/: pom.xml
platform/jvm/flabbergast-s3/src/main/amazon/: s3.o_0
platform/jvm/flabbergast-s3/src/main/java/: module-info.java
platform/jvm/flabbergast-stdlib/: pom.xml
platform/jvm/flabbergast-stdlib/src/main/java/: module-info.java
platform/jvm/flabbergast-stdlib/src/main/o_0/: emit.o_0  lookup.o_0  machine.o_0  math.o_0  sql.o_0  time.o_0  utils.o_0  zip.o_0
platform/jvm/flabbergast-stdlib/src/main/o_0/apache/: aurora.o_0
platform/jvm/flabbergast-stdlib/src/main/o_0/render/: ini.o_0  json.o_0  python.o_0  uri.o_0  xml.o_0  yaml.o_0
platform/jvm/flabbergast-stdlib/src/main/o_0/unix/: ar.o_0  cron.o_0  perm.o_0  utils.o_0
platform/jvm/flabbergast-zookeeper/: README.md  pom.xml  tutorial.md
platform/jvm/flabbergast-zookeeper/src/main/java/: module-info.java
platform/jvm/flabbergast-zookeeper/src/main/o_0/apache/: zookeeper.o_0
platform/jvm/runtime/flabbergast/: AttributeNames.java  BaseFunctionInterop.java  BaseMapFunctionInterop.java  BaseReflectedInterop.java  BasicSourceReference.java  BinaryFunctions.java  BlackholeComputation.java  BlackholeFuture.java  BuiltInLibraries.java  CharacterCategory.java  Computation.java  ComputeOverride.java  ComputeValue.java  ConcatIterator.java  ConcatStringish.java  Configuration.java.in  ConsoleTaskMaster.java  ConsumeResult.java  Context.java  CreateTime.java  CurrentInformation.java  Decompress.java  ElaboratePrinter.java  EnvironmentUriHandler.java  Escape.java  EscapeBuilder.java  EscapeCharacterBuilder.java  EscapeRangeBuilder.java  FailureComputation.java  FailureFuture.java  FileHandler.java  FixedFrame.java  ForkedContext.java  Frame.java  FromBase64.java  FtpHandler.java  Func.java  Func2.java  Func3.java  Func4.java  (+55 more)
platform/jvm/runtime/flabbergast/time/: BaseParts.java  BaseTime.java  Compare.java  ConsumeDateTime.java  FromParts.java  FromUnix.java  LocalNow.java  Modify.java  SwitchZone.java  UtcNow.java
platform/jvm/stdlib-javadoc/: index.html
platform/jvm/testing/flabbergast/: CheckResult.java  DirtyCollector.java  TestHarness.java  TestTaskMaster.java
platform/jvm/tests/working/: xinvoke.o_0
vim/: .gitignore  Makefile  Makefile.am  filetype.vim  ftdetect.vim  indent.vim  syntax.vim
vim/debian/: changelog  control  copyright
(+567 files in other folders)
